--- a/src/infrastructure/componentes/app/app.css
+++ b/src/infrastructure/componentes/app/app.css
@@ -1,3 +1,14 @@
 .app {
     display: block;
 }
+body {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
+        Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+        sans-serif;
+}
+ul {
+    list-style: none;
+}
+li {
+    padding-block: 1rem;
+}
